#60: fixed background shapes issue by adding overflow: hidden property to band.scss.

--- a/src/scss/components/_band.scss
+++ b/src/scss/components/_band.scss
@@ -1,4 +1,5 @@
 .band {
+  overflow: hidden;
   padding-bottom: 150px;
   padding-top: rhythm(26);
   position: relative;
